update gửi job qua email và 1 số bug nhỏ